fix: scrollbar styles

--- a/src/app/components/task-board/task-board.component.css
+++ b/src/app/components/task-board/task-board.component.css
@@ -8,6 +8,25 @@
   overflow: auto;
 }
 
+.board::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+
+.board::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.board::-webkit-scrollbar-thumb {
+  background: #78437F;
+  border-radius: 2rem;
+}
+
+.board::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+
 @media (min-width: 992px) {
   .board {
     padding: 1rem 1.5rem 2.5rem 1.5rem;
