--- a/src/app/components/task-details-modal/task-details-modal.component.css
+++ b/src/app/components/task-details-modal/task-details-modal.component.css
@@ -174,3 +174,21 @@
   max-height: 70vh;
   overflow-y: auto;
 }
+
+.modal .body::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+
+.modal .body::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.modal .body::-webkit-scrollbar-thumb {
+  background: #78437F;
+  border-radius: 2rem;
+}
+
+.modal .body::-webkit-scrollbar-corner {
+  background: transparent;
+}
