--- a/src/styles.css
+++ b/src/styles.css
@@ -10,24 +10,6 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.board::-webkit-scrollbar {
-  width: 0.25rem;
-  height: 0.25rem;
-}
-
-.board::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.board::-webkit-scrollbar-thumb {
-  background: #78437F;
-  border-radius: 2rem;
-}
-
-.board::-webkit-scrollbar-corner {
-  background: transparent;
-}
-
 html::-webkit-scrollbar {
   width: 0;
   height: 0;
